tests/files/flow_controller_tests/should_run/092.cmdr
x = sin(3.14);
print arcsin(x);