tests/files/flow_controller_tests/should_fail/077.cmdr
x = "cat";
print arcsin(x);